# some_local_executor

./: Cargo.toml  LICENSE-MIT.md  NOTICE  README.md
src/: channel.rs  continuation_type.rs  lib.rs  some_executor_adapter.rs
